<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/mohito" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="5dp"
        android:text="@string/selectCategory" />
   
 <LinearLayout
     android:id="@+id/mainCategoriesContainer"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/textView1"
     android:layout_below="@+id/textView2"
     android:layout_marginTop="20dp"
     android:background="@drawable/border"
     android:orientation="vertical"
     android:paddingTop="3dp" >

     <Button
         android:id="@+id/showAllButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minWidth="75dp"
         android:onClick="onClick"
         android:text="@string/categoryAll" />

     <Button
         android:id="@+id/showScienceButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minWidth="75dp"
         android:onClick="onClick"
         android:text="@string/categoryScience" />

     <Button
         android:id="@+id/showPoetryButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minWidth="75dp"
         android:onClick="onClick"
         android:text="@string/categoryPoetry" />

     <Button
         android:id="@+id/showFictionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minWidth="75dp"
         android:onClick="onClick"
         android:text="@string/categoryFiction" />
 </LinearLayout>
    
    <Button
        android:id="@+id/switchToLibraryManager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="300dp"
        android:onClick="onClick"
        android:text="@string/libraryManager" />
   	
     <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="200dp"
        android:onClick="onClick"
        android:text="@string/search" />
     
     <EditText
         android:id="@+id/searchTextEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/searchButton"
         android:layout_marginLeft="70dp"
         android:ellipsize="start"
         android:hint="@string/edit_search"
         android:inputType="textCapWords"
         android:maxWidth="120dp"
         android:minWidth="120dp"
         android:maxLines="1"
         android:textSize="12sp" />

</RelativeLayout>