<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BookDetailsActivity" >

    <LinearLayout
        android:id="@+id/detailsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <RelativeLayout
            android:id="@+id/detailsViewImageContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4" >

            <ImageView
                android:id="@+id/bookCover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pages"
                android:src="@drawable/bookcover" />

            <TextView
                android:id="@+id/detailsViewBookCoverTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:maxWidth="80dp"
                android:text="@string/dummyText"
                android:textColor="#FFFFFF"
                android:textIsSelectable="false"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/detailsViewRightSideContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.6"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/detailsViewTitleContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/detailsViewTitleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="100dp"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/detailsViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:enabled="false"
                    android:inputType="textCapWords"
                    android:maxWidth="150dp"
                    android:text="@string/title"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detailsViewAuthorContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/detailsViewAuthorLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="100dp"
                    android:text="@string/author" />

                <EditText
                    android:id="@+id/detailsViewAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:maxWidth="150dp"
                    android:text="@string/author"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detailsViewPagesContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/detailsViewPagesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pages" />

                <EditText
                    android:id="@+id/detailsViewPages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:enabled="false"
                    android:inputType="number"
                    android:maxWidth="150dp"
                    android:text="@string/pages"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/detailsViewButtonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailsContainer" >

        <Button
            android:id="@+id/ReturnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:onClick="onClick"
            android:text="@string/Return"
            android:visibility="gone" />

        <Button
            android:id="@+id/loanOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/ReturnButton"
            android:layout_alignLeft="@+id/ReturnButton"
            android:layout_marginLeft="150dp"
            android:onClick="onClick"
            android:text="@string/loanOut"
            android:visibility="gone" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailsViewReading"
            android:layout_marginTop="20dp"
            android:onClick="onClick"
            android:text="@string/save"
            android:visibility="gone" />

        <EditText
            android:id="@+id/detailsViewReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:inputType="textCapSentences"
            android:maxWidth="350dp"
            android:scrollbars="vertical"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>